--- a/acxi.1
+++ b/acxi.1
@@ -718,7 +718,7 @@ conversions for example.
 general. Same as \fB\-\-debug\fR.
 
 .TP
-.B \-\-version\fR, \fB\-v\fR
+.B \-\-version\fR
 Show acxi version.
 
 .SH CONFIGURATION FILE
