--- a/acxi.1
+++ b/acxi.1
@@ -755,7 +755,7 @@ override/ignore all other configuration files.
 The following corresponds to the \fBUSER MODIFIABLE VALUES\fR section in the top 
 comment header of acxi.
 
-Sample:
+Sample contents of a configuration file:
 .nf
 DESTINATION_DIRECTORY=/home/fred/music/opus
 SOURCE_DIRECTORY=/home/fred/music/flac
