--- a/acxi.1
+++ b/acxi.1
@@ -470,7 +470,7 @@ Samples: \fBacxi \-s./ -X dtn\fR (to test) \fBacxi \-s./ -X dtnw\fR (to apply)
 .B \-\-info\-rating {2\-xxx}\fR
 Any number greater than 1 for the \fB\-\-infofix q\fR item \fBQuality: /[rating 
 number]\fR line if you want to change from default of 4. Some people like rating 
-by x/100, others x/10, etc. Use with \fB\-X\fR or set in configurations.
+by x/100, others x/10, etc. Use with \fB\-X q\fR or set in configurations.
 
 .TP
 .B \-\-input\fR, \fB\-i {aif|flac|raw|shn|wav}\fR
