--- a/acxi.1
+++ b/acxi.1
@@ -92,7 +92,7 @@ logic may be moved to straight Perl to remove the md5 program requirement.
 \fB\-\-checksum\-verify\fR require \fBflac\fR executable and \fBmd5sum\fR (or 
 any comparable program that generates md5 hashes). 
 .IP * 2
-\fB\-\-infofix q\fR require \fBmetaflac\fR. 
+\fB\-\-infofix q\fR requires \fBmetaflac\fR. 
 .IP * 2
 \fB\-\-infofix [t|u]\fR require Perl module \fBText::Autoformat\fR. 
 .IP * 2
