more man cleanups

--- a/acxi.1
+++ b/acxi.1
@@ -970,10 +970,12 @@ File an issue report:
 Post on acxi forums:
 .I https://techpatterns.com/forums/about1491.html
 .TP
-.B IRC irc.oftc.net#smxi
+.B IRC
 You can also visit
 .I irc.oftc.net
-\fRchannel:\fI #smxi\fR to post issues.
+or
+.I irc.libera.chat
+\fRchannel:\fI #smxi\fR to post issues. Libera is probably best for acxi issues.
 
 .SH HOMEPAGE
 .I  https://github.com/smxi/acxi
