--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-08\-12" acxi "acxi manual"
+.TH ACXI 1 "2021\-08\-18" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -747,10 +747,10 @@ acxi will read its configuration/initialization files in the following order.
 .TP
 .B STANDARD DETECTION
 \fB/etc/acxi.conf\fR contains the default configurations. These can be 
-overridden by user configurations found in one of the following locations. If 
-\fB$XDG_CONFIG_HOME/acxi.conf\fR exists, it use it, else if 
-\fB$HOME/.conf/acxi.conf\fR exists, it will use it, and as a last default, the 
-legacy location \fB$HOME/.acxi.conf\fR is used, i.e.:
+overridden by user configurations found in one of the following locations, in 
+this order of priority: \fB$XDG_CONFIG_HOME/acxi.conf\fR, 
+\fB$HOME/.conf/acxi.conf\fR, and, as last default, \fB$HOME/.acxi.conf\fR, 
+i.e.:
 
 \fB$XDG_CONFIG_HOME/acxi.conf\fR > \fB$HOME/.conf/acxi.conf\fR >
 \fB$HOME/.acxi.conf\fR
