--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-08\-20" acxi "acxi manual"
+.TH ACXI 1 "2021\-08\-26" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -25,7 +25,7 @@ Tagging: \fBacxi\fR [\fB\-\-aggregate\fR [file name|extension]]
 [\fB\-\-tag\fR {"TAG1%:tag value^^TAG2%:tag value"}] 
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-checksum\fR] [\fB\-\-checksum\-delete\fR] 
-[\fB\-\-checksum\-verify\fR] [\fB\-\-no\-ffp\fR] 
+[\fB\-\-checksum\-verify\fR] [\fB\-\-no\-ffp\fR] [\fB\-\-ffp\-dupes\fR] 
 .IP * 2
 Output Controls: \fBacxi\fR [\fB\-v\fR {0-3}] [\fB\-\-quiet\fR] 
 [\fB\-\-debug\fR] 
