Adding --ffp-dupes support, fine tunings, works!!! neat!!

--- a/acxi.1
+++ b/acxi.1
@@ -359,6 +359,14 @@ a file path.
 Sample: \fB\-\-exclude\-append='My Sharona^^Dancing Queen'\fR
 
 .TP
+.B \-\-ffp\-dupes\fR
+Check your collection for duplicated flac files or releases, helpful to find 
+repeated items in your collection. Note that in cases of only 1 file matching, 
+it's in theory possible for that to be a random coincidence, so always confirm 
+before deleting anything!! But it's pretty rare for an ffp hash to be 
+duplicated.
+
+.TP
 .B \-\-force\fR, \fB\-f\fR
 Overwrites all the mp3/ogg/opus/jpg/txt etc. files, even if they already exist. 
 This is useful if you for example want to change compression quality on existing 
