--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-08\-26" acxi "acxi manual"
+.TH ACXI 1 "2021\-09\-02" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -7,7 +7,7 @@ Syncing: \fBacxi\fR [\fB\-a\fR {extensions}] [\fB\-\-clean\fR]
 [\fB\-\-codec\fR {aac|libfdk_aac2}] [\fB\-\-copy\fR {extensions}] 
 [\fB\-d\fR {destination-path}]  [\fB\-\-exclude\fR] 
 [\fB\-\-exclude\-append\fR {filename|extension}] 
-[\fB\-f\fR] [\fB\-\-fork\fR {0-xx}]
+[\fB\-f\fR] [\fB\-\-flac\-data\fR] [\fB\-\-fork\fR {0-xx}]
 [\fB\-i\fR {flac|raw|shn|wave}] [\fB\-o\fR {flac|mp3|ogg|opus}] 
 [\fB\-q\fR {NUMBER]} [\fB\-s\fR {source\-path}] 
 .IP * 2
