--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-09\-02" acxi "acxi manual"
+.TH ACXI 1 "2021\-09\-07" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -32,7 +32,7 @@ Output Controls: \fBacxi\fR [\fB\-v\fR {0-3}] [\fB\-\-quiet\fR]
 [\fB\-\-debug\fR] 
 .IP * 2
 Miscellaneous:  [\fB\-h\fR] [\fB\-U\fR] [\fB\-v\fR] 
-[\fB\-\-dot\fR] [\fB\-\-no\-dot\fR] 
+[\fB\-\-dot\fR] [\fB\-\-no\-dot\fR] [\fB\-\-source\-glob\fR {relative path}]
 .IP * 2
 Debugging: \fBacxi\fR [\fB\-\-debug\fR]  [\fB\-\-nlink\fR] 
 [\fB\-\-no\-nlink\fR] [\fB\-\-test\fR] 
@@ -668,6 +668,19 @@ lot, especially over network connections.
 .TP
 .B \-\-source\fR, \fB\-s {path}\fR
 Path to the top-most directory containing your source files (eg, flac).
+
+.TP
+.B \-\-source\-glob\fR, \fB\-\-sg {relative path}\fR
+Accepts wild card paths if you only want to update or check certain directories 
+within the main  \fB\-\-source\fR working directory. Requires \fB\-\-source\fR, 
+wild card path must be within \fB-\-source\fR, like:
+
+\fBacxi -s ./ \-\-sg 'BandName*' \-V\fR
+
+Will only verify folders tarting with BandName. Remember to always quote the 
+value otherwise your shell will expand the wild cards!!
+
+Works with all options except \fB\-\-clean\fR.
 
 .TP
 .B \-\-start {number}\fR
