--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-09\-07" acxi "acxi manual"
+.TH ACXI 1 "2021\-09\-08" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -144,12 +144,15 @@ Sampe 4 (collects multiple values):
 .TP
 .B \-\-analyze\fR, \fB\-Z\fR
 Similar to \fB\-Xq\fR, except creates per file/directory reports with screen 
-output. Shows flac file size, duration, kb/s, and also per directory summaries 
-of those values.
+output. Shows flac file quality (sample bit size, sampling rate, and channels), 
+size, duration, kb/s, and also per directory summaries of those values. In 
+directory summary, if more than one flac quality type found in directory, will 
+print out each type found, which can be useful to see if different sampling 
+rates or sample bit sizes were used.
 
 To write to a file, use something like this:
 
-\fBacxi -s./ \-\-analyze 2&>1 | tee analzyse.txt\fR
+\fBacxi -s./ \-\-analyze 2&>1 | tee analyze.txt\fR
 
 The tee will allow the output to also scroll on screen while it runs, which is
 helpful in many cases. Otherwise just redirect output to file directly.
