--- a/acxi.1
+++ b/acxi.1
@@ -693,14 +693,14 @@ lot, especially over network connections.
 Path to the top-most directory containing your source files (eg, flac).
 
 .TP
-.B \-\-source\-glob\fR, \fB\-O {path relative to \-s path}\fR
+.B \-\-source\-glob\fR, \fB\-g {path relative to \-s path}\fR
 Accepts wild card paths if you only want to update or check certain directories 
 within the main  \fB\-\-source\fR working directory. Requires \fB\-\-source\fR, 
 wild card path must be within \fB-\-source\fR, like:
 
-\fBacxi -s ./ \-O 'BandName*' \-V\fR
+\fBacxi -s ./ \-g 'BandName*' \-V\fR
 
-\fBacxi -s ./ \-O '{BandName,Band Name,Band_Name}*' \-V\fR
+\fBacxi -s ./ \-g '{BandName,Band Name,Band_Name}*' \-V\fR
 
 Will only verify folders tarting with BandName. Remember to always quote the 
 value otherwise your shell will expand the wild cards!!
