--- a/acxi.1
+++ b/acxi.1
@@ -157,6 +157,9 @@ To write to a file, use something like this:
 The tee will allow the output to also scroll on screen while it runs, which is
 helpful in many cases. Otherwise just redirect output to file directly.
 
+\fB\-v 1\fR wraps per file data to key: value pair lines; \fB\-v 3\fR adds raw 
+non rounded seconds/bits to all size / time results.
+
 .TP
 .B \-\-append, \fB\-a  {extensions}\fR
 Takes one or more comma separated extensions. Do not use whitespaces in this 
